--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,16 +4,16 @@ jobs:
   golangci-lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v1
+    - uses: actions/checkout@v2
+      
+    - uses: actions/setup-go@v2
       with:
         go-version: 1.14
-    - uses: actions/checkout@v1
-      
-    - name: install golangci-lint
-      run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.21.0
-
+    
     - name: golangci-lint
-      run: $(go env GOPATH)/bin/golangci-lint run
+      uses: golangci/golangci-lint-action@v1
+      with:
+          version: v1.27
 
     - name: test
       run: make test
